# msc-thesis

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/src/: ApproxKMeans.cpp  ApproxKMeans.h  CaffeDescriptor.cpp  CaffeDescriptor.h  CustomSiftKeypoints.cpp  CustomSiftKeypoints.h  Datasets.cpp  Datasets.h  FusedFeatureDescriptors.cpp  FusedFeatureDescriptors.h  LargeBagOfWords.cpp  LargeBagOfWords.h  MapGenerator.cpp  MapGenerator.h  Relocalization.cpp  Relocalization.h  create_descriptor_training_data.cpp  main_analyze_relocalization.cpp  main_generate_pointclouds.cpp  main_pfh_from_ply.cpp  main_run_semidense.cpp
cpp/test/: test_approx_kmeans.cpp  test_caffe_descriptor.cpp  test_map_generation.cpp
euryale-scripts/: all.prototxt  all_48_obs.prototxt  all_48_obs_solver.prototxt  all_solver.prototxt  fire.prototxt  fire.sh  fire_3d.prototxt  fire_obs.prototxt  fire_solver.prototxt  fire_solver_3d.prototxt  fire_solver_obs.prototxt  greatcourt.prototxt  greatcourt.sh  greatcourt_solver.prototxt
matlab/: plot_real_dist_vs_pfh.m
python/: plot_actual_vs_expected.py
python/Analyzer/: find_cambridge_frames.py  fit_inv_gaussian.py  visualize_trajectory.py
python/DescriptorLearning/: greatcourt.prototxt  greatcourt_solver.prototxt  inpaint_depthmaps.py  input_preprocessor.py  main.py  plot_losses.py  raycastinliers.py  restore.py  solver.prototxt  test.prototxt  test_32.prototxt  test_32_cambridge.prototxt  test_48.prototxt  train_test.prototxt  verify_train_data.py  viewmesh.py
report/thesis/: abstract.tex  acknowledgment.tex  thesis.bib  thesis.tex  titlepage.tex
report/thesis/chapter1/: chapter1.tex
report/thesis/chapter2/: chapter2.tex
report/thesis/conclusion/: conclusion.tex
report/thesis/experiments/: experiments.tex
report/thesis/introduction/: introduction.tex
report/thesis/methodology/: methodology.tex  scale_ambiguity.pdf_tex
report/thesis/relatedwork/: relatedwork.tex
scripts/: change-output-calib.sh  reextract_cambridge.sh  rescale_cambridge.sh  run_colmap.sh
